# mr_sqlite

./: plugin_info.json  pyproject.toml  setup.py
src/mr_sqlite/: __init__.py  client.py  mod.py
src/mr_sqlite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mr_sqlite/filters/: operators.py  parser.py
