[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mr_sqlite"
version = "0.1.0"
description = "MindRoot SQLite Database Integration"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "sqlite3",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.3.0",
]
